--- a/package.json
+++ b/package.json
@@ -6,20 +6,33 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress:open": "cypress open",
+    "test": "jest"
   },
   "dependencies": {
+    "axios": "^1.5.1",
+    "cypress": "^13.3.2",
+    "firebase": "^10.5.0",
+    "next": "13.5.5",
+    "next-routes": "^1.4.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.5"
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
+    "identity-obj-proxy": "^3.0.0",
     "postcss": "^8",
-    "tailwindcss": "^3"
-  }
+    "tailwindcss": "^3",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
+  },
+  "main": "index.js",
+  "author": "OluwatobiJohn <oluwatobijohn49@gmail.com>",
+  "license": "MIT"
 }
